--- a/YouDrink_V1.0/YouDrink_Design.css
+++ b/YouDrink_V1.0/YouDrink_Design.css
@@ -7,3 +7,16 @@ h1 {
     color: white;
     background-color: tomato;
 }
+
+.sects {
+    background-color: black;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.Drink_Font {
+    font-size: 25pt;
+    text-align: right;
+    margin-top: 10px;
+}
