--- a/YouDrink_V1.0/YouDrink_Design.css
+++ b/YouDrink_V1.0/YouDrink_Design.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 .sects {
-    background-color: black;
+    background-color: red;
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 10px;
